Handled special characters in URL.